added first line to make it executable as script